{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 169,
  "lineage": "eb40c0a3-b86b-485e-dc0d-573e61710ec1",
  "resources": [
    {
      "module": "module.Elastic_IP[\"eip-prod-nat-prod-a\"]",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5dc63b1d2d60084",
            "association_id": "eipassoc-0ead75d7d6417b33e",
            "domain": "vpc",
            "id": "eipalloc-0d5dc63b1d2d60084",
            "network_border_group": "eu-south-2",
            "network_interface": "eni-05df9f013ba18d78a",
            "private_dns": "ip-10-120-227-46.eu-south-2.compute.internal",
            "private_ip": "10.120.227.46",
            "public_dns": "ec2-18-101-192-174.eu-south-2.compute.amazonaws.com",
            "public_ip": "18.101.192.174",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-prod-nat-prod-a"
            },
            "tags_all": {
              "Name": "eip-prod-nat-prod-a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.Internet_Gateway[\"igw-prod\"]",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:internet-gateway/igw-05163b3d0e80ffab2",
            "id": "igw-05163b3d0e80ffab2",
            "owner_id": "105054799343",
            "tags": {
              "Name": "igw-prod"
            },
            "tags_all": {
              "Name": "igw-prod"
            },
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.NAT_Gateway[\"nat-prod-pub-a\"]",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5dc63b1d2d60084",
            "association_id": "eipassoc-0ead75d7d6417b33e",
            "connectivity_type": "public",
            "id": "nat-06bcffcc9fc55a875",
            "network_interface_id": "eni-05df9f013ba18d78a",
            "private_ip": "10.120.227.46",
            "public_ip": "18.101.192.174",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d7a5541ae2069e11",
            "tags": {
              "Name": "nat-prod-pub-a"
            },
            "tags_all": {
              "Name": "nat-prod-pub-a"
            }
          },
          "dependencies": [
            "module.Elastic_IP.aws_eip.this",
            "module.Public_Subnets.aws_subnet.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Private_Subnets[\"subnet-prod-pvt-a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-0986a1247b90bf944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2a",
            "availability_zone_id": "eus2-az1",
            "cidr_block": "10.120.224.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0986a1247b90bf944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-prod-pvt-a"
            },
            "tags_all": {
              "Name": "subnet-prod-pvt-a"
            },
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Private_Subnets[\"subnet-prod-pvt-b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-0054a76be741b7ec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2b",
            "availability_zone_id": "eus2-az2",
            "cidr_block": "10.120.225.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0054a76be741b7ec6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-prod-pvt-b"
            },
            "tags_all": {
              "Name": "subnet-prod-pvt-b"
            },
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Private_Subnets[\"subnet-prod-pvt-c\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-0e7496470c100cb71",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2c",
            "availability_zone_id": "eus2-az3",
            "cidr_block": "10.120.226.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e7496470c100cb71",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-prod-pvt-c"
            },
            "tags_all": {
              "Name": "subnet-prod-pvt-c"
            },
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Public_Subnets[\"subnet-prod-pub-a\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-0d7a5541ae2069e11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2a",
            "availability_zone_id": "eus2-az1",
            "cidr_block": "10.120.227.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7a5541ae2069e11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-prod-pub-a"
            },
            "tags_all": {
              "Name": "subnet-prod-pub-a"
            },
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Public_Subnets[\"subnet-prod-pub-b\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-067dbf5b9e2a1a06a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2b",
            "availability_zone_id": "eus2-az2",
            "cidr_block": "10.120.227.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067dbf5b9e2a1a06a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-prod-pub-b"
            },
            "tags_all": {
              "Name": "subnet-prod-pub-b"
            },
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Public_Subnets[\"subnet-prod-pub-c\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:subnet/subnet-0a122050b02d3ab25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-south-2c",
            "availability_zone_id": "eus2-az3",
            "cidr_block": "10.120.227.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a122050b02d3ab25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "105054799343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-prod-pub-c"
            },
            "tags_all": {
              "Name": "subnet-prod-pub-c"
            },
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table[\"rtbl-prod-pub-subnets\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:route-table/rtb-0ca374b65a3f0b0c7",
            "id": "rtb-0ca374b65a3f0b0c7",
            "owner_id": "105054799343",
            "propagating_vgws": [
              "vgw-0efb3a56c06e27898"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05163b3d0e80ffab2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtbl-prod-pub-subnets"
            },
            "tags_all": {
              "Name": "rtbl-prod-pub-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.Route_Table[\"rtbl-prod-pvt-subnets\"]",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:route-table/rtb-0da8c6b68952eaf0e",
            "id": "rtb-0da8c6b68952eaf0e",
            "owner_id": "105054799343",
            "propagating_vgws": [
              "vgw-0efb3a56c06e27898"
            ],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-06bcffcc9fc55a875",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rtbl-prod-pvt-subnets"
            },
            "tags_all": {
              "Name": "rtbl-prod-pvt-subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.SG-EKS[\"sg_eks_prod_genia\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:security-group/sg-029c344128b0d68a2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029c344128b0d68a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Security group Cluster EKS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240219225236482600000002",
            "name_prefix": "terraform-",
            "owner_id": "105054799343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_eks_prod_genia"
            },
            "tags_all": {
              "Name": "sg_eks_prod_genia"
            },
            "timeouts": null,
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.SG-EKS[\"sg_nlb_prod_genia\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:security-group/sg-0d3d861e063eec242",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3d861e063eec242",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.110.0.0/24",
                  "10.120.224.0/22"
                ],
                "description": "Security group SFTP EKS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240227044006820800000001",
            "name_prefix": "terraform-",
            "owner_id": "105054799343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_nlb_prod_genia"
            },
            "tags_all": {
              "Name": "sg_nlb_prod_genia"
            },
            "timeouts": null,
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.SG-EKS[\"sg_rds_prod_genia\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:security-group/sg-0085451284c83a1a3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0085451284c83a1a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.120.224.0/22",
                  "10.110.0.0/24"
                ],
                "description": "Security group Cluster EKS",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240219225236481800000001",
            "name_prefix": "terraform-",
            "owner_id": "105054799343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_rds_prod_genia"
            },
            "tags_all": {
              "Name": "sg_rds_prod_genia"
            },
            "timeouts": null,
            "vpc_id": "vpc-095ac05dd893b0748"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.VPC[\"vpc-prod\"]",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-south-2:105054799343:vpc/vpc-095ac05dd893b0748",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.120.224.0/22",
            "default_network_acl_id": "acl-077e1ed0fe7ab5c4a",
            "default_route_table_id": "rtb-0a5c4aeb10765ada2",
            "default_security_group_id": "sg-05d231f4fb916577f",
            "dhcp_options_id": "dopt-0d2b39a1cecedc9d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095ac05dd893b0748",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5c4aeb10765ada2",
            "owner_id": "105054799343",
            "tags": {
              "Name": "vpc-prod"
            },
            "tags_all": {
              "Name": "vpc-prod"
            }
          }
        }
      ]
    },
    {
      "module": "module.private_routes[\"rtbl-prod-pvt-subnets\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0da8c6b68952eaf0e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-06bcffcc9fc55a875",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0da8c6b68952eaf0e",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Elastic_IP.aws_eip.this",
            "module.NAT_Gateway.aws_nat_gateway.this",
            "module.Public_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_routes[\"rtbl-prod-pub-subnets\"]",
      "mode": "managed",
      "type": "aws_route",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05163b3d0e80ffab2",
            "id": "r-rtb-0ca374b65a3f0b0c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ca374b65a3f0b0c7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Internet_Gateway.aws_internet_gateway.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private[\"association_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfa77b80dd3faef6",
            "route_table_id": "rtb-0da8c6b68952eaf0e",
            "subnet_id": "subnet-0986a1247b90bf944"
          },
          "dependencies": [
            "module.Private_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private[\"association_2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f39ee79272bce682",
            "route_table_id": "rtb-0da8c6b68952eaf0e",
            "subnet_id": "subnet-0054a76be741b7ec6"
          },
          "dependencies": [
            "module.Private_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_private[\"association_3\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db589d2e9e154bf7",
            "route_table_id": "rtb-0da8c6b68952eaf0e",
            "subnet_id": "subnet-0e7496470c100cb71"
          },
          "dependencies": [
            "module.Private_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_public[\"association_1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5e85088cf87cacf",
            "route_table_id": "rtb-0ca374b65a3f0b0c7",
            "subnet_id": "subnet-0d7a5541ae2069e11"
          },
          "dependencies": [
            "module.Public_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_public[\"association_2\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c602f22b41f0cbcb",
            "route_table_id": "rtb-0ca374b65a3f0b0c7",
            "subnet_id": "subnet-067dbf5b9e2a1a06a"
          },
          "dependencies": [
            "module.Public_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table_association_public[\"association_3\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5277acfddd43689",
            "route_table_id": "rtb-0ca374b65a3f0b0c7",
            "subnet_id": "subnet-0a122050b02d3ab25"
          },
          "dependencies": [
            "module.Public_Subnets.aws_subnet.this",
            "module.Route_Table.aws_route_table.this",
            "module.VPC.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}